@@ -5,6 +5,7 @@ Pending
 * Removes support for Forex Bank due to BankId requirement.
 * Fixes for MinPension login.
 * Update certificates for Coop, ICA, Osuuspankki, PlusGirot, SevenDay & Steam.
+* Fixes for Bredband2.
 
 v1.9.10.1 (2015-11-22)
 * Update certificate for ICA.
